@@ -12,7 +12,7 @@ import scala.annotation.tailrec
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @Warmup(iterations = 1000)
 @Measurement(iterations = 10000)
-@Fork(value = 1, jvmArgsAppend = Array("-Xmx1G", "-Xms1G", "-ea", "-server", "-XX:+UseCompressedOops", "-XX:+AlwaysPreTouch", "-XX:+UseCondCardMark"))
+@Fork(value = 1, jvmArgsAppend = Array("-Xmx1G", "-Xms1G", "-server", "-XX:+AggressiveOpts", "-XX:+UseCompressedOops", "-XX:+AlwaysPreTouch", "-XX:+UseCondCardMark"))
 @Threads(value = 1)
 abstract class AbstractBaseFutureBenchmark {
   // fjp = ForkJoinPool, fix = FixedThreadPool, fie = FutureInternalExecutor, gbl = GlobalEC
@@ -262,12 +262,12 @@ class AndThenFutureBenchmark extends OpFutureBenchmark {
 }
 
 class VariousFutureBenchmark extends OpFutureBenchmark {
-  final val mapFun: Result => Result = _.toUpperCase
-  final val flatMapFun: Result => Future[Result] = r => Future.successful(r)
-  final val filterFun: Result => Boolean = _ ne null
-  final val transformFun: Try[Result] => Try[Result] = _ => throw null
-  final val recoverFun: PartialFunction[Throwable, Result] = { case _ => "OK" }
-  final val keepLeft: (Result, Result) => Result = (a,b) => a
+  private[this] final val mapFun: Result => Result = _.toUpperCase
+  private[this] final val flatMapFun: Result => Future[Result] = r => Future.successful(r)
+  private[this] final val filterFun: Result => Boolean = _ ne null
+  private[this] final val transformFun: Try[Result] => Try[Result] = _ => throw null
+  private[this] final val recoverFun: PartialFunction[Throwable, Result] = { case _ => "OK" }
+  private[this] final val keepLeft: (Result, Result) => Result = (a,b) => a
 
   @tailrec private[this] final def next(i: Int, f: Future[Result])(implicit ec: ExecutionContext): Future[Result] =
       if (i > 0) { next(i - 1, f.map(mapFun).flatMap(flatMapFun).filter(filterFun).zipWith(f)(keepLeft).transform(transformFun).recover(recoverFun)) } else { f }
@@ -284,8 +284,8 @@ class VariousFutureBenchmark extends OpFutureBenchmark {
 }
 
 class LoopFutureBenchmark extends OpFutureBenchmark {
-  val depth = 50
-  val size  = 2000
+  private[this] val depth = 50
+  private[this] val size  = 2000
 
   final def pre_loop(i: Int)(implicit ec: ExecutionContext): Future[Int] =
     if (i % depth == 0) Future.successful(i + 1).flatMap(pre_loop)
